--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -1589,6 +1589,34 @@ hr {
   }
 }
 
+.bottom-btn-sm.all {
+  position: fixed;
+  background: -webkit-gradient(linear, left bottom, left top, from(#fff), to(transparent));
+  background: linear-gradient(to top, #fff, transparent);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 2rem 1rem;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.bottom-btn-sm.all .btn {
+  width: 100%;
+}
+
+@media screen and (min-width: 576px) {
+  .bottom-btn-sm.all .btn {
+    max-width: 328px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .custom-form-control.with-helper .helper {
   display: -webkit-box;
   display: -ms-flexbox;
