--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -1389,6 +1389,7 @@ hr {
     height: 100%;
   }
 }
+
 .bottom-btn-sm {
   pointer-events: none;
 
@@ -1453,6 +1454,27 @@ hr {
         @media screen and (min-width: 576px) {
           max-width: 328px;
         }
+      }
+    }
+  }
+
+  &.all {
+    position: fixed;
+    background: linear-gradient(to top, #fff, transparent);
+    display: flex;
+    justify-content: center;
+    padding: 2rem 1rem;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    .btn {
+      width: 100%;
+
+      @media screen and (min-width: 576px) {
+        max-width: 328px;
+        margin-left: auto;
+        margin-right: auto;
       }
     }
   }
