--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -2370,8 +2370,10 @@ textarea.custom-input,
     width: 90%;
     font-size: 24px;
     height: 56px;
+    left: 50%;
+    transform: translateX(-50%);
 
-    @media screen and (max-width: 1366px) {
+    @media screen and (max-width: 1919px) {
       bottom: 10rem;
       font-size: 14px;
       width: 85%;
